crates/data_privacy_macros_impl/tests/snapshots/classified__success_named_field.snap
---
source: crates/data_privacy_macros_impl/tests/classified.rs
expression: pretty
---
struct Token {
    value: String,
}
impl ::data_privacy::Classified for Token {
    fn data_class(&self) -> &::data_privacy::DataClass {
        ExampleTaxonomy::PersonallyIdentifiableInformation.as_ref()
    }
}
impl ::core::fmt::Debug for Token {
    fn fmt(&self, f: &mut core::fmt::Formatter<'_>) -> core::fmt::Result {
        let dc = <Self as ::data_privacy::Classified>::data_class(self);
        write!(f, "<CLASSIFIED:{}/{}>", dc.taxonomy(), dc.name())
    }
}
impl ::core::fmt::Display for Token {
    fn fmt(&self, f: &mut core::fmt::Formatter<'_>) -> core::fmt::Result {
        let dc = <Self as ::data_privacy::Classified>::data_class(self);
        write!(f, "<CLASSIFIED:{}/{}>", dc.taxonomy(), dc.name())
    }
}
impl ::data_privacy::RedactedDebug for Token
where
    String: ::core::fmt::Debug,
{
    #[expect(
        clippy::cast_possible_truncation,
        reason = "Converting from u64 to usize, value is known to be <= STACK_BUFFER_SIZE"
    )]
    fn fmt(
        &self,
        redactor: &dyn ::data_privacy::Redactor,
        output: &mut ::std::fmt::Formatter<'_>,
    ) -> ::core::fmt::Result {
        const STACK_BUFFER_SIZE: usize = 128;
        let v = &self.value;
        let dc = <Self as ::data_privacy::Classified>::data_class(self);
        let mut local_buf = [0u8; STACK_BUFFER_SIZE];
        let amount = {
            let mut cursor = ::std::io::Cursor::new(&mut local_buf[..]);
            if ::std::io::Write::write_fmt(&mut cursor, format_args!("{v:?}")).is_ok() {
                cursor.position() as usize
            } else {
                local_buf.len() + 1
            }
        };
        if amount <= local_buf.len() {
            debug_assert!(
                ::core::str::from_utf8(& local_buf[..amount]).is_ok(),
                "write_fmt output must be UTF-8"
            );
            let s = unsafe { ::core::str::from_utf8_unchecked(&local_buf[..amount]) };
            redactor.redact(dc, s, output)
        } else {
            redactor.redact(dc, &format!("{v:?}"), output)
        }
    }
}
impl ::data_privacy::RedactedDisplay for Token
where
    String: ::core::fmt::Display,
{
    #[expect(
        clippy::cast_possible_truncation,
        reason = "Converting from u64 to usize, value is known to be <= STACK_BUFFER_SIZE"
    )]
    fn fmt(
        &self,
        redactor: &dyn ::data_privacy::Redactor,
        output: &mut ::std::fmt::Formatter,
    ) -> ::core::fmt::Result {
        const STACK_BUFFER_SIZE: usize = 128;
        let v = &self.value;
        let dc = <Self as ::data_privacy::Classified>::data_class(self);
        let mut local_buf = [0u8; STACK_BUFFER_SIZE];
        let amount = {
            let mut cursor = ::std::io::Cursor::new(&mut local_buf[..]);
            if ::std::io::Write::write_fmt(&mut cursor, format_args!("{v}")).is_ok() {
                cursor.position() as usize
            } else {
                local_buf.len() + 1
            }
        };
        if amount <= local_buf.len() {
            debug_assert!(
                ::core::str::from_utf8(& local_buf[..amount]).is_ok(),
                "write_fmt output must be UTF-8"
            );
            let s = unsafe { ::core::str::from_utf8_unchecked(&local_buf[..amount]) };
            redactor.redact(dc, s, output)
        } else {
            redactor.redact(dc, &format!("{v}"), output)
        }
    }
}
impl core::ops::Deref for Token {
    type Target = ::core::convert::Infallible;
    fn deref(&self) -> &Self::Target {
        panic!("Deref to Infallible should never happen")
    }
}
impl ::core::ops::DerefMut for Token {
    fn deref_mut(&mut self) -> &mut Self::Target {
        panic!("Deref to Infallible should never happen")
    }
}
